# seo-toolkit

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  drizzle.config.ts  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements-allowlist.txt  requirements.txt  tsconfig.json  vitest.config.ts
.claude/rules/: python-quality.md  seo-agents.md
.github/: dependabot.yml
.github/workflows/: ci.yml  code-review.yml  codeql.yml  debt-metrics.yml  docs.yml  mutation-testing.yml
configs/: example.config.json  hairgenetix.config.json  loveoverexile.config.json
docs/: accounts-and-access.md  architecture.md  business-case.md  coding-standards.md  competitor-analysis.md  competitor-recommendations.md  decisions-log.md  deployment-guide.md  index.md  market-research.md  metrics.md  mutation-metrics.md  processes-and-flows.md  quality-gates.md  roadmap.md  security-risk-log.md  strategic-os.md  test-strategy.md  todo.md  uat-guide.md  uat-wizard.html
docs/agents/: ai-discovery-agent.md  audit-agent.md  content-optimizer-agent.md  content-writer-agent.md  keywords-agent.md  link-builder-agent.md  rank-tracker-agent.md  reporter-agent.md  schema-audit-agent.md
reports/hg/: fix-list-2026-03-13.md
reports/loe/: content-gaps-2026-03-14.md  tech-audit-2026-03-09.md
scripts/: __init__.py  generate_uat_wizard.py
scripts/shared/: __init__.py  config.py
specs/001-autonomous-content-engine/: automated-article-generator-briefing.md  capability-map.md  roadmap.md  (+4 more)
templates/: content-brief-template.md
tests/: conftest.py
(+303 files in other folders)
